<resources>
    <string name="app_name">Burae</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1">Shopping Easy</string>
    <string name="intro1_des">In our application, you can easily add the product you want to the cart and pay. </string>
    <string name="intro2">Diversity</string>
    <string name="intro2_des">The products in our app come from many different countries, so there is a lot of variety. </string>
    <string name="loginTitle">Welcome The Burae</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="hint_username">My Username</string>
    <string name="hint_password">My Password</string>
    <string name="login_btn">Login</string>
</resources>